--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,12 @@ h3 {
   font-size: 2.5rem;
 }
 
+.intro{
+  width: 30%;
+  margin:auto;
+  padding-top: 3%;
+}
+
 .top {
   width: 200;
   background-color: #beeef7;
@@ -49,6 +55,7 @@ h3 {
   background-color: #373a6d;
   text-align: center;
   margin: 0;
+  padding: 30px 0 20px;
 }
 
 .cloud-one {
@@ -106,7 +113,7 @@ a {
   width: 50%;
   text-align: left;
   line-height: 2;
-  margin: 100px auto 100px auto;
+  margin: 5% auto;
 }
 
 .contact-me {
@@ -128,4 +135,40 @@ a {
   width: 25%;
   float: left;
   margin-right: 30px;
+}
+
+.butn {
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  text-shadow: 1px 1px 3px #666666;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 22px;
+  background: #373a6d;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.butn:hover {
+  background: #6fc2d0;
+  text-decoration: none;
+}
+
+.Goals{
+  padding-bottom: 2%;
+}
+
+a{
+  margin: 10px 20px;
+  font-size: 1.6rem;
+  text-decoration: none;
+  padding-bottom: 1%;
+}
+a:hover{
+  color:grey;
+}
+
+.copyright{
+  font-size: 0.7rem;
 }
